bench/real: Java image launches with the production entrypoint flags (--enable-preview, native access) — the router's structured-concurrency code needs them
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012HjZVPe6hrTgyjSc7YkTz8